--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"阿申的博客",
+    "subTitle":"记录学习",
+    "avatarUrl":"blob:https://account.microsoft.com/4543cbe5-f59d-40ee-b56c-321d64bbfb08",
     "GMEEK_VERSION":"last"
 }
