--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"阿申的博客",
     "subTitle":"记录学习",
-    "avatarUrl":"blob:https://account.microsoft.com/4543cbe5-f59d-40ee-b56c-321d64bbfb08",
+    "avatarUrl":"https://lh3.googleusercontent.com/a/ACg8ocL1wJg6Ny1vJPx3V-jeGVc8Z29-rVKFIoSVmC8rb2BEoudtDaCS=s96-c-rg-br100",
     "GMEEK_VERSION":"last"
 }
