--- a/config.json
+++ b/config.json
@@ -6,5 +6,5 @@
     "startSite":"02/16/2015",
     "themeMode":"manual",
     "dayTheme":"light",
-    "nightTheme":"dark_colorblind",
+    "nightTheme":"dark_colorblind"
 }
